Omnibox - Reloads of the Current Page Should Not Count as Typed Navigations

Tested interactively by using about:omnibox "Show all details" to see the
typed and visit counts for a certain URL.  Did various actions and made
sure the counts only increased at appropriate times.  Test on both Linux
and Android.

Bug: 746641
Change-Id: I067727912fa92cdc8b81689545ebd14a1ee17c92
Reviewed-on: https://chromium-review.googlesource.com/664067
Commit-Queue: Mark Pearson <mpearson@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Reviewed-by: Ted Choc <tedchoc@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501818}
Former-commit-id: 90388a48697cce7562029069c48312e9399a4f63